welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
	if (!estSurBiscuit && prendBiscuit())
                                          ^