welcome.lessons.welcome.loopfor.LoopFor.scala.code
for (nbPlace <- 0 to 6)
{
	if (!estSurBiscuit)
	{
		avance();
	}
	if (estSurBiscuit)
	{
		porteBiscuit();
		recule();
	}
	if (!estSurBiscuit && prendBiscuit())
	recule();
	
}